found the abc demo

--- a/dev/occurrence_mcmc_vs_abc.ipynb
+++ b/dev/occurrence_mcmc_vs_abc.ipynb
@@ -11,14 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected 91446 targets after cuts\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -32,6 +33,7 @@
     "from scipy import optimize\n",
     "import corner\n",
     "from utils import dfm\n",
+    "import astroabc\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -250,6 +252,13 @@
     "#!pip install corner\n",
     "_ = corner.corner(sampler.flatchain, labels=[r'$\\ln F_0$', r'$\\alpha$', r'$\\beta$'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
