architecture changes to utils and creation of completeness for whole stellar range

--- a/dev/abc_demo.ipynb
+++ b/dev/abc_demo.ipynb
@@ -38,7 +38,8 @@
     "        candidate_getter : function\n",
     "        Gets candidate samplers of the posterior distribution.\n",
     "        Takes in parameters, as returned by prior.\n",
-    "        Returns function 'candidate' that samples from the candidate distribution, to be compared to true data, which\n",
+    "        Returns function 'candidate' that samples from the candidate distribution, \n",
+    "        to be compared to true data, which\n",
     "            Takes in the number of sample points to return.\n",
     "            Returns numpy.ndarray of sample points of the desired shape.\n",
     "        '''\n",
@@ -200,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
