--- a/notebooks/occurrence_abc.ipynb
+++ b/notebooks/occurrence_abc.ipynb
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
     "    perturbed_parameters : list of scalars / numpy.ndarrays.\n",
     "    The same list, but with white noise added.\n",
     "    '''\n",
-    "    var_d = abs(np.vectorize(price_rogers_2014_binned.prVarDelta)(*price_uncertainty_params)) # abs is stopgap\n",
+    "    var_d = abs(np.vectorize(price_rogers_2014_binned.prVarDelta)(*price_uncertainty_params)) * 0 # abs is stopgap\n",
     "    price_uncertainty_params[0] += np.random.normal(0, np.sqrt(var_d), size=(len(price_uncertainty_params[0]),))\n",
     "    # var_D = 2 * abs(price_rogers_2014_binned.prVarTau(*price_uncertainty_params)) + abs(\n",
     "    #               price_rogers_2014_binned.prVarTc(*price_uncertainty_params))\n",
@@ -468,7 +468,8 @@
     "    price_uncertainty_params = [depths, T, tau, f0, texp, periods, gamma, sigma]\n",
     "    price_uncertainty_params = add_uncertainties(price_uncertainty_params)\n",
     "    \n",
-    "    pl_rads = np.sqrt(price_uncertainty_params[0]) * star_radius\n",
+    "    depths = price_uncertainty_params[0]\n",
+    "    pl_rads = np.sqrt(depths) * star_radius\n",
     "    periods = price_uncertainty_params[5]\n",
     "    # [kepid, period, radius, ecc, cosincl, impact param b, t0, transit depth d, transit duration D, is_detected]\n",
     "    planets_matrix = np.vstack((star_kepids, periods, pl_rads, eccens, cosincl, impacts, t0, depths, D)).T\n",
@@ -477,14 +478,16 @@
     "    probs = pcomp_vectors(combined_synth, combined_synth['period'].values, \n",
     "                          combined_synth['prad'].values, combined_synth['ecc'].values)\n",
     "    probs = np.nan_to_num(np.array(probs))\n",
+    "    if all(probs == 0):\n",
+    "        print(\"all probabilities of detection are 0\")\n",
     "    detected = np.random.binomial(1, probs)\n",
-    "    catalog['is_detected'] = detected\n",
-    "    return catalog.astype({'kepid': np.int64, 'is_detected': bool})"
+    "    combined_synth['is_detected'] = detected\n",
+    "    return combined_synth.astype({'kepid': np.int64, 'is_detected': bool})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -502,13 +505,6 @@
      "output_type": "stream",
      "text": [
       "/Users/adityasengupta/Library/Python/3.7/lib/python/site-packages/ipykernel_launcher.py:73: RuntimeWarning: invalid value encountered in arcsin\n",
-      "/Users/adityasengupta/Library/Python/3.7/lib/python/site-packages/ipykernel_launcher.py:85: RuntimeWarning: invalid value encountered in sqrt\n",
-      "/usr/local/lib/python3.7/site-packages/scipy/stats/_distn_infrastructure.py:903: RuntimeWarning: invalid value encountered in greater\n",
-      "  return (a < x) & (x < b)\n",
-      "/usr/local/lib/python3.7/site-packages/scipy/stats/_distn_infrastructure.py:903: RuntimeWarning: invalid value encountered in less\n",
-      "  return (a < x) & (x < b)\n",
-      "/usr/local/lib/python3.7/site-packages/scipy/stats/_distn_infrastructure.py:1827: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  cond2 = (x >= np.asarray(_b)) & cond0\n",
       "/Users/adityasengupta/Library/Python/3.7/lib/python/site-packages/ipykernel_launcher.py:38: RuntimeWarning: invalid value encountered in greater_equal\n",
       "/Users/adityasengupta/Library/Python/3.7/lib/python/site-packages/ipykernel_launcher.py:41: RuntimeWarning: invalid value encountered in greater\n"
      ]
@@ -522,242 +518,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>kepid</th>\n",
-       "      <th>period</th>\n",
-       "      <th>prad</th>\n",
-       "      <th>ecc</th>\n",
-       "      <th>cosincl</th>\n",
-       "      <th>b</th>\n",
-       "      <th>t0</th>\n",
-       "      <th>d</th>\n",
-       "      <th>D</th>\n",
-       "      <th>is_detected</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6386780</td>\n",
-       "      <td>31.469612</td>\n",
-       "      <td>0.581827</td>\n",
-       "      <td>0.019507</td>\n",
-       "      <td>0.019648</td>\n",
-       "      <td>0.446268</td>\n",
-       "      <td>2.455463e+06</td>\n",
-       "      <td>0.333171</td>\n",
-       "      <td>0.227821</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>7767733</td>\n",
-       "      <td>0.667731</td>\n",
-       "      <td>0.537532</td>\n",
-       "      <td>0.025118</td>\n",
-       "      <td>0.034268</td>\n",
-       "      <td>0.273000</td>\n",
-       "      <td>2.455532e+06</td>\n",
-       "      <td>0.370585</td>\n",
-       "      <td>0.058477</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>11766423</td>\n",
-       "      <td>4.218322</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.064336</td>\n",
-       "      <td>0.531748</td>\n",
-       "      <td>0.452041</td>\n",
-       "      <td>2.454956e+06</td>\n",
-       "      <td>-0.124093</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11766423</td>\n",
-       "      <td>21.256535</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.047276</td>\n",
-       "      <td>0.399345</td>\n",
-       "      <td>0.109789</td>\n",
-       "      <td>2.455267e+06</td>\n",
-       "      <td>-0.135203</td>\n",
-       "      <td>3.278347</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>7939384</td>\n",
-       "      <td>9.539270</td>\n",
-       "      <td>0.739384</td>\n",
-       "      <td>0.008517</td>\n",
-       "      <td>0.849559</td>\n",
-       "      <td>0.926535</td>\n",
-       "      <td>2.455249e+06</td>\n",
-       "      <td>0.489317</td>\n",
-       "      <td>0.066551</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>235184</th>\n",
-       "      <td>12934451</td>\n",
-       "      <td>1.985847</td>\n",
-       "      <td>0.967623</td>\n",
-       "      <td>0.037184</td>\n",
-       "      <td>0.128834</td>\n",
-       "      <td>0.626661</td>\n",
-       "      <td>2.455363e+06</td>\n",
-       "      <td>1.187371</td>\n",
-       "      <td>0.075307</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>235185</th>\n",
-       "      <td>12934451</td>\n",
-       "      <td>1.713053</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.034176</td>\n",
-       "      <td>0.496128</td>\n",
-       "      <td>0.607090</td>\n",
-       "      <td>2.455162e+06</td>\n",
-       "      <td>-0.443109</td>\n",
-       "      <td>0.069910</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>235186</th>\n",
-       "      <td>9202950</td>\n",
-       "      <td>4.736682</td>\n",
-       "      <td>1.029517</td>\n",
-       "      <td>0.014264</td>\n",
-       "      <td>0.109784</td>\n",
-       "      <td>0.595264</td>\n",
-       "      <td>2.454975e+06</td>\n",
-       "      <td>2.084915</td>\n",
-       "      <td>0.088060</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>235187</th>\n",
-       "      <td>9202950</td>\n",
-       "      <td>29.018114</td>\n",
-       "      <td>1.018158</td>\n",
-       "      <td>0.050359</td>\n",
-       "      <td>0.061109</td>\n",
-       "      <td>0.857634</td>\n",
-       "      <td>2.455138e+06</td>\n",
-       "      <td>2.039159</td>\n",
-       "      <td>0.102450</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>235188</th>\n",
-       "      <td>9581296</td>\n",
-       "      <td>2.802258</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.005595</td>\n",
-       "      <td>0.007392</td>\n",
-       "      <td>0.159498</td>\n",
-       "      <td>2.455258e+06</td>\n",
-       "      <td>-0.121770</td>\n",
-       "      <td>0.186587</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>235189 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           kepid     period      prad       ecc   cosincl         b  \\\n",
-       "0        6386780  31.469612  0.581827  0.019507  0.019648  0.446268   \n",
-       "1        7767733   0.667731  0.537532  0.025118  0.034268  0.273000   \n",
-       "2       11766423   4.218322       NaN  0.064336  0.531748  0.452041   \n",
-       "3       11766423  21.256535       NaN  0.047276  0.399345  0.109789   \n",
-       "4        7939384   9.539270  0.739384  0.008517  0.849559  0.926535   \n",
-       "...          ...        ...       ...       ...       ...       ...   \n",
-       "235184  12934451   1.985847  0.967623  0.037184  0.128834  0.626661   \n",
-       "235185  12934451   1.713053       NaN  0.034176  0.496128  0.607090   \n",
-       "235186   9202950   4.736682  1.029517  0.014264  0.109784  0.595264   \n",
-       "235187   9202950  29.018114  1.018158  0.050359  0.061109  0.857634   \n",
-       "235188   9581296   2.802258       NaN  0.005595  0.007392  0.159498   \n",
-       "\n",
-       "                  t0         d         D  is_detected  \n",
-       "0       2.455463e+06  0.333171  0.227821        False  \n",
-       "1       2.455532e+06  0.370585  0.058477        False  \n",
-       "2       2.454956e+06 -0.124093       NaN        False  \n",
-       "3       2.455267e+06 -0.135203  3.278347        False  \n",
-       "4       2.455249e+06  0.489317  0.066551        False  \n",
-       "...              ...       ...       ...          ...  \n",
-       "235184  2.455363e+06  1.187371  0.075307         True  \n",
-       "235185  2.455162e+06 -0.443109  0.069910        False  \n",
-       "235186  2.454975e+06  2.084915  0.088060        False  \n",
-       "235187  2.455138e+06  2.039159  0.102450        False  \n",
-       "235188  2.455258e+06 -0.121770  0.186587        False  \n",
-       "\n",
-       "[235189 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "catalog_synth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4085"
+       "0"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,33 +538,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detected_planets = catalog_synth[catalog_synth.is_detected]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "145       1.553991\n",
-       "254       1.778579\n",
-       "384       3.190829\n",
-       "423       1.785889\n",
-       "445       0.829006\n",
-       "            ...   \n",
-       "235042    4.385693\n",
-       "235108    0.691359\n",
-       "235154    2.303495\n",
-       "235177    0.920344\n",
-       "235184    0.967623\n",
-       "Name: prad, Length: 4085, dtype: float64"
+       "Series([], Name: prad, dtype: float64)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "catalog_synth[catalog_synth.is_detected].prad"
+    "detected_planets.prad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], Name: period, dtype: float64)"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "detected_planets.period"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re = 0.009171\n",
+    "sum(detected_planets.prad * re / detected_planets.radius < 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], dtype: float64)"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(detected_planets.prad * re / detected_planets.radius) ** 2 - detected_planets.d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "744"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(combined.koi_prad / combined.radius < 1)"
    ]
   },
   {
