abc-pmc setup in progress

--- a/notebooks/occurrence_abc.ipynb
+++ b/notebooks/occurrence_abc.ipynb
@@ -745,40 +745,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 2.47061339, 12.85      ,  1.        ],\n",
-       "        [ 2.20473536, 16.39      ,  1.        ],\n",
-       "        [23.66836427,  3.06      ,  1.        ],\n",
-       "        ...,\n",
-       "        [ 3.27582262,  2.18      ,  1.        ],\n",
-       "        [15.87364565,  1.61      ,  1.        ],\n",
-       "        [17.97979059,  2.18      ,  1.        ]]])"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import copy\n",
-    "kois_abc = np.array([np.vstack((kois.koi_period, kois.koi_prad, np.ones(len(kois)))).T]) # filter on FPs\n",
-    "kois_abc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "stellar_sample_size = 100\n",
-    "stellar_sample = [row for row in stellar.sample(n=stellar_sample_size).itertuples()]\n",
+    "stellar_sample = stellar.sample(n=stellar_sample_size)\n",
+    "\n",
+    "class SyntheticCatalog:\n",
+    "    def __init__(self, f, stars):\n",
+    "        self.f = f\n",
+    "        self.stars = stars\n",
+    "        self.catalog = generate_planet_catalog(f, stars)\n",
     "\n",
     "class OccurrencePrior(stats.rv_continuous):\n",
     "    def pdf(self, f):\n",
@@ -789,26 +767,24 @@
     "    \n",
     "def occurrence_candidate_getter(f):\n",
     "    def candidate(size=1):\n",
-    "        catalogs = [generate_planet_catalog(f, stellar_sample) for _ in range(size)]\n",
-    "        return np.array([np.vstack((c.period, c.prad, c.is_detected)).T for c in catalogs])\n",
+    "        catalogs = [SyntheticCatalog(f, stellar_sample) for _ in range(size)]\n",
+    "        return np.array([np.vstack((c.catalog.period, c.catalog.prad, c.catalog.is_detected)).T for c in catalogs])\n",
     "    return candidate\n",
     "    \n",
     "def occurrence_distance(s1, s2):\n",
     "    return np.sum((s1 - s2) ** 2)\n",
     "\n",
-    "def occurrence_statistic(catalog):\n",
-    "    N = np.zeros_like(f)\n",
-    "    found_inds = np.where(catalog[0,:,2] == 1)[0]\n",
-    "    detected = catalog[0][found_inds] # the 0 is jank and should be changed\n",
-    "    if detected.shape[0] == catalog.shape[1]:\n",
-    "        Nstars = len(stellar)\n",
-    "    else:\n",
-    "        Nstars = stellar_sample_size # this is slightly jank and will fail 1 time in a trillion\n",
-    "    period_bins = np.digitize(np.log(detected[:,0]), log_p)\n",
-    "    radius_bins = np.digitize(np.log(detected[:,1]), log_r)\n",
-    "    for i, j in zip(period_bins, radius_bins):\n",
-    "        if i < N.shape[0] and j < N.shape[1]: # exclude some on the edges\n",
-    "            N[i][j] += 1\n",
+    "def occurrence_statistic(catalogs):\n",
+    "    for catalog in catalogs:\n",
+    "        N = np.zeros_like(f)\n",
+    "        found_inds = np.where(catalog.catalog[:,2] == 1)[0]\n",
+    "        detected = catalog[found_inds]\n",
+    "        Nstars = len(catalog.stars)\n",
+    "        period_bins = np.digitize(np.log(detected[:,0]), log_p)\n",
+    "        radius_bins = np.digitize(np.log(detected[:,1]), log_r)\n",
+    "        for i, j in zip(period_bins, radius_bins):\n",
+    "            if i < N.shape[0] and j < N.shape[1]: # exclude some on the edges\n",
+    "                N[i][j] += 1\n",
     "    return N / Nstars\n",
     "    \n",
     "OccurrenceABCSampler = ABCSampler(OccurrencePrior(), occurrence_candidate_getter, occurrence_distance, occurrence_statistic)\n"
@@ -820,18 +796,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "kois_abc = [np.vstack((kois.koi_period, kois.koi_prad, kois.koi_disposition == \"CONFIRMED\")).T]\n",
+    "kois_abc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/adityasengupta/Library/Python/3.7/lib/python/site-packages/ipykernel_launcher.py:72: RuntimeWarning: invalid value encountered in arcsin\n"
+     ]
+    }
+   ],
+   "source": [
     "candidate = occurrence_candidate_getter(f)()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/adityasengupta/Library/Python/3.7/lib/python/site-packages/ipykernel_launcher.py:72: RuntimeWarning: invalid value encountered in arcsin\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'catalog'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-98-f26e5b367f28>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mabc_f\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mOccurrenceABCSampler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkois_abc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthreshold\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/projects/pals/occurrence-rates/dev/abc.py\u001b[0m in \u001b[0;36msample\u001b[0;34m(self, data, prior, max_iters, threshold, verbose)\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0mcandidate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcandidate_getter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m             \u001b[0msynthetic\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcandidate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m             \u001b[0mdis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatistic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msynthetic\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatistic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mdis\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mthreshold\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-96-319dee6d5286>\u001b[0m in \u001b[0;36moccurrence_statistic\u001b[0;34m(catalogs)\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mcatalog\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcatalogs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0mN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m         \u001b[0mfound_inds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcatalog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcatalog\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m         \u001b[0mdetected\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcatalog\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfound_inds\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0mNstars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcatalog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstars\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'catalog'"
+     ]
+    }
+   ],
    "source": [
-    "abc_f = OccurrenceABCSampler.sample(kois_abc, threshold=1e-2)"
+    "abc_f = OccurrenceABCSampler.sample(kois_abc, threshold=1e-1, verbose=True)"
    ]
   },
   {
