tons of updates

--- a/notebooks/mcmc_occurrence.ipynb
+++ b/notebooks/mcmc_occurrence.ipynb
@@ -67,7 +67,7 @@
    ],
    "source": [
     "kois = dataprocessing.get_kois()\n",
-    "stellar = dataprocessing.stellar_cuts(dataprocessing.get_stellar())\n",
+    "stellar = dataprocessing.stellar_cuts(dataprocessing.get_kepler_stellar())\n",
     "kois = kois[kois[\"kepid\"].isin(stellar[\"kepid\"])]\n",
     "period_rng = (50, 300)\n",
     "rp_rng = (0.75, 2.5)\n",
