--- a/notebooks/misc_testing.ipynb
+++ b/notebooks/misc_testing.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "kois = dataprocessing.get_kois()\n",
-    "stellar = dataprocessing.get_stellar()\n",
+    "stellar = dataprocessing.get_kepler_stellar()\n",
     "kois = kois[kois[\"kepid\"].isin(stellar[\"kepid\"])]\n",
     "kois = kois[np.isfinite(kois[\"koi_prad\"])]"
    ]
@@ -268,7 +268,7 @@
    "outputs": [],
    "source": [
     "kois = dataprocessing.get_kois()\n",
-    "stellar = dataprocessing.get_stellar()\n",
+    "stellar = dataprocessing.get_kepler_stellar()\n",
     "# stellar = dataprocessing.stellar_cuts(stellar)\n",
     "kois = kois[kois[\"kepid\"].isin(stellar[\"kepid\"])]\n",
     "period_rng = (50, 300)\n",
